# reporttestingapp

./: .gitignore  7B5C9400  AR_Center_Results.html  C9FA6A00  LICENSE  README.md  Run_SOO_PreClose_Tester.bat  SOO Corp (1)_results.xlsx  SOO Corp_results.xlsx  SOO MFR (1)_results.xlsx  SOO PreClose Multi.xlsx  SOO PreClose Multi_results.xlsx  SOO PreClose Working.xlsx  SOO_Preclose_Report.html  main.py  pyproject.toml  requirements.txt  soo_preclose.spec  ~$SOO PreClose Multi_results.xlsx
issues/: arreserve-sql-refactor.md  sendemail-validate-checks.md
sample_data/: comparison_results.csv  sample.csv  sqlsample.csv
scripts/: install_test_deps.sh
soo_preclose_tester/: __init__.py  __main__.py
src/: __init__.py  cli.py  debug_query.py  main.py
tests/: qt_stubs.py  test_account_categories.py  test_ar_center_cleaning.py  test_basic.py  test_clean_dataframe_duplicates.py  test_comparison_engine.py  test_corp_soo_cleaning.py  test_db_connector.py  test_extract_sql_codes.py  test_gather_accounts.py  test_gather_accounts_nodash.py  test_gather_accounts_numeric.py  test_gather_accounts_sheetname.py  test_gather_accounts_sql.py  test_gather_sheet_names_sql.py  test_generate_pdf_report.py  test_helper_modules.py  test_mfr_cleaning.py  test_open_account_categories_sql.py  test_pattern_matching.py  test_plugins.py  test_regression_csv_cleaning.py  test_remove_duplicate_header_row.py  test_report_configs.py  test_report_title_env.py  test_results_viewer.py  test_unmerge_behavior.py  test_workflow_wizard.py
themes/: README.md  base.qss  brand.qss  dark.qss  light.qss
(+55 files in other folders)
