[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soo-preclose-tester"
version = "0.1.0"
description = "SOO PreClose Report Tester"
authors = [{name = "Your Organization"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

# Dependencies taken from requirements.txt
dependencies = [
    "SQLAlchemy>=1.4.0",
    "PyQt6>=6.2.0",
    "pandas>=1.3.0",
    "pyodbc>=4.0.32",
    "qtawesome>=1.1.1",
    "openpyxl>=3.0.9",
    "markdown>=3.3.7",
    "pytest>=7.0.0",
    "python-dateutil>=2.8.2",
    "numpy>=1.21.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "python-dotenv==1.0.0",
    "jinja2",
    "weasyprint",
    "plotly",
]

[project.optional-dependencies]
dashboard = ["dash"]

[project.scripts]
soo-preclose-tester = "soo_preclose_tester.__main__:run"

[tool.setuptools.packages.find]
include = ["src*", "soo_preclose_tester*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"src" = ["../themes/*.qss", "../assets/*.png"]
"soo_preclose_tester" = ["../themes/*.qss", "../assets/*.png"]
